add detail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".storydetail.StoryDetailActivity"
+            android:label="@string/title_activity_story_detail"></activity>
     </application>
 
 </manifest>
