update comments view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
         </activity>
         <activity
             android:name=".storydetail.StoryDetailActivity"
-            android:label="@string/title_activity_story_detail"></activity>
+            android:label="@string/title_activity_story_detail" />
+        <activity
+            android:name=".comment.CommentActivity"
+            android:label="@string/title_activity_comment"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
